Fix subnav HTML structure - wrap POST link in li.subnav-trigger

--- a/_sass/layout/_header.scss
+++ b/_sass/layout/_header.scss
@@ -107,7 +107,14 @@
         box-shadow: 0 4px 8px var(--dropdown-shadow);
     }
 
-    .subnav > a {
+    .subnav .subnav-trigger {
+        display: block;
+        position: relative;
+        padding: 0;
+        margin: 0;
+    }
+
+    .subnav .subnav-trigger > a {
         display: block;
         padding: 0 1.5rem;
         line-height: 5rem;
@@ -118,7 +125,7 @@
     }
 
     /* Dropdown arrow indicator */
-    .subnav > a::after {
+    .subnav .subnav-trigger > a::after {
         content: '▾';
         margin-left: 0.5rem;
         font-size: 1.2rem;
@@ -126,16 +133,16 @@
         display: inline-block;
     }
 
-    .subnav:hover > a::after {
+    .subnav:hover .subnav-trigger > a::after {
         transform: rotate(180deg);
     }
 
-    .subnav > a:hover {
+    .subnav .subnav-trigger > a:hover {
         color: var(--accent); /* Hover = accent */
         background-color: var(--nav-hover-bg);
     }
 
-    .subnav li {
+    .subnav li:not(.subnav-trigger) {
         display: block;
         position: absolute;
         z-index: 1001;
@@ -155,17 +162,17 @@
     }
 
     /* Staggered animation delays for dropdown items */
-    .subnav li:nth-child(1) { transition-delay: 0ms; top: 100%; }
-    .subnav li:nth-child(2) { transition-delay: 50ms; top: calc(100% + 4rem); }
-    .subnav li:nth-child(3) { transition-delay: 100ms; top: calc(100% + 8rem); }
-    .subnav li:nth-child(4) { transition-delay: 150ms; top: calc(100% + 12rem); }
+    .subnav li:nth-child(2) { transition-delay: 0ms; top: 100%; }
+    .subnav li:nth-child(3) { transition-delay: 50ms; top: calc(100% + 4rem); }
+    .subnav li:nth-child(4) { transition-delay: 100ms; top: calc(100% + 8rem); }
+    .subnav li:nth-child(5) { transition-delay: 150ms; top: calc(100% + 12rem); }
 
     .subnav li:hover {
         background-color: var(--dropdown-hover-bg);
         color: var(--text);
     }
 
-    .subnav:hover li {
+    .subnav:hover li:not(.subnav-trigger) {
         opacity: 1;
         visibility: visible;
         transform: translateY(0);
